PP-735: Fix line spacing

--- a/src/containers/SaveStyle/SaveStyleModal/style.scss
+++ b/src/containers/SaveStyle/SaveStyleModal/style.scss
@@ -26,6 +26,7 @@
     margin: 15px auto;
     &:not(.active) {
       background-color: $color-gray19; 
+      border-color: $color-gray19;
       color: white;
     }
   }
